Change div editable thing to textareas(div was someway bugged so text indicator was jumping to fron on each type

--- a/src/Components/Notes/Notes.css
+++ b/src/Components/Notes/Notes.css
@@ -5,7 +5,7 @@
     display: inline-block;
 }
 
-.note-container {
+.note-input {
     background-color: rgba(0, 0, 0, 0.2);
     border: 2px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -13,8 +13,15 @@
     margin: 10px 0;
     padding: 5px 0;
     width: 200px;
+    height: auto;
     word-wrap: break-word;
     border-radius: 10px;
+    outline: none;
+    text-align: center;
+    font-size: 16px;
+    resize: none;
+    font-family: inherit;
+    field-sizing: content;
 }
 
 button {
